@startuml SimulationController

title Núcleo da Simulação

[*] --> Configuration
Configuration --> StartClock : Start
StartClock --> FightState : Timeout
StartClock -r-> DisengageRobot : Terminate
FightState -r-> DisengageRobot : Terminate
DisengageRobot -> Configuration : Reset

state FightState{
    [*] --> InitialMove
    InitialMove --> SearchStrategy : Timeout
}

/'
' Descrições
'/

Configuration : Check for bluetooth communications\nand run configuration routine
StartClock : Halt for T ms and start fight -> setTimeout(T)
DisengageRobot : Stop all robot functions and halt
InitialMove : Execute selected inital move strategy
SearchStrategy : Execute selected search strategy

@enduml